# recurring_investor

./: .gitignore  HELP.md  README.md  app.py  investment_lib.py  pyproject.toml  requirements.txt  stock_investment_calculator.py
strategies/: ADDING_NEW_STRATEGY.md  README.md  __init__.py  base.py  macd_swing.py  rsi_swing.py  simple_recurring.py
strategies/macd_ema_trailing_stop/: __init__.py  macd_ema_trailing_stop.md  macd_ema_trailing_stop.py
strategies/macd_swing/: __init__.py  macd_swing.md  macd_swing.py
strategies/rsi_swing/: __init__.py  rsi_swing.md  rsi_swing.py
strategies/simple_recurring/: __init__.py  simple_recurring.md  simple_recurring.py
tests/: README.md  conftest.py  test_rsi_swing.py  test_simple_recurring.py
