[tool.poetry]
name = "spx-invest"
version = "0.1.0"
description = "Stock investment calculator"
authors = ["frankiefourfingers44@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.2.66"
pandas = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
