[tool.poetry]
name = "spx-invest"
version = "0.1.0"
description = "Stock investment calculator"
authors = ["frankiefourfingers44@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.66"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
streamlit = "^1.51.0"
plotly = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
